<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.singpaulee.tutorialsharedpreference.LoginActivity">

    <!--TODO 3 Set Layout Login (Parent: RelativeLayout)-->
    <android.support.v7.widget.CardView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="LOGIN"
                android:textSize="24sp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/medt_username"
                style="@style/CustomEdittext"
                android:hint="@string/masukkan_username"
                android:inputType="textVisiblePassword"
                app:met_floatingLabelText="@string/username" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/medt_password"
                style="@style/CustomEdittext"
                android:hint="@string/masukkan_password"
                android:inputType="textPassword"
                app:met_floatingLabelText="@string/password" />

            <Button
                android:id="@+id/btn_masuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masuk"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
