<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.singpaulee.tutorialsharedpreference.MainActivity">

    <!--TODO 14 Atur Layout MainActivity-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#fff"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                style="@style/CustomTextview"
                android:text="@string/username"/>
            <TextView
                android:id="@+id/tv_username"
                style="@style/CustomTextview"
                android:text="@string/username"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#fff"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                style="@style/CustomTextview"
                android:text="@string/telp"/>
            <TextView
                android:id="@+id/tv_telp"
                style="@style/CustomTextview"
                android:text="@string/telp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#fff"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                style="@style/CustomTextview"
                android:text="@string/alamat"/>
            <TextView
                android:id="@+id/tv_alamat"
                style="@style/CustomTextview"
                android:text="@string/alamat"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#fff"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                style="@style/CustomTextview"
                android:text="@string/tanggal_lahir"/>
            <TextView
                android:id="@+id/tv_tanggal_lahir"
                style="@style/CustomTextview"
                android:text="@string/tanggal_lahir"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <Button
            android:id="@+id/btn_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profil"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_keluar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keluar"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
